--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,109 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  background: #FFF7ED;
+  display: inline-flex;
+  padding: 2.25006rem 1.61369rem 2.16394rem 1.625rem;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Inter;
+  gap: 14.70081rem;
+  width: 100%;
+}
+
+.link-styles {
+  text-decoration: none;
+  color: #000;
+}
+
+.link-styles:hover {
+  text-decoration: underline;
+}
+
+.nav-link-container {
+  display: flex;
+  gap: 1em;
+  color: #4D4D4D;
+  text-align: right;
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.43269rem; /* 143.267% */
+}
+
+.van-life-span {
+  color: #000;
+  font-family: Inter;
+  font-size: 1.58456rem;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 2.51694rem; /* 158.842% */
+}
+
+.home-main {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46) 0%, rgba(0, 0, 0, 0.46) 100%), url('../public/home-background.png'), lightgray 0px -65.191px / 100% 178.109% no-repeat;
+  /* width: 34.25944rem; */
+  width: 100%;
+  height: 100vh;
+  flex-shrink: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+}
+
+.home-title-p {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 2.25rem;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 2.625rem; /* 116.667% */
+}
+
+.home-sub-title-p {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem; /* 150% */
+}
+
+.home-button {
+  border-radius: 0.3125rem;
+  background: #FF8C38;
+  color: #FFF;
   text-align: center;
+  font-family: Inter;
+  font-size: 0.99663rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.97888rem; /* 198.552% */
+  width: 80%;
+  height: 3.1145rem;
+  flex-shrink: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.home-footer {
+  background: #252525;
+  display: flex;
+  width: 34.25944rem;
+  height: 4.67175rem;
+  padding: 1.60506rem 6.64275rem 1.57175rem 6.625rem;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  position: absolute;
+  bottom: 0;
+  transform: translate(0, 0);
+  color: #AAA;
+  text-align: center;
+  font-family: Inter;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.43269rem; /* 163.733% */
+  width: 100%;
 }
