--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,29 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
 
+.home-main-content-container {
+  margin-top: 10vh;
+  padding: 2em;
+  gap: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  align-content: center;
+  /* border: 2px solid red; */
+}
+
+.home-container-p {
+  /* border: 2px solid blue; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
 }
 
 .home-title-p {
@@ -60,6 +82,8 @@
   font-style: normal;
   font-weight: 800;
   line-height: 2.625rem; /* 116.667% */
+  align-self: center;
+  /* border: 2px solid green; */
 }
 
 .home-sub-title-p {
@@ -69,9 +93,11 @@
   font-style: normal;
   font-weight: 500;
   line-height: 1.5rem; /* 150% */
+  margin: 1em auto;
 }
 
 .home-button {
+  border: none;
   border-radius: 0.3125rem;
   background: #FF8C38;
   color: #FFF;
@@ -84,6 +110,7 @@
   width: 80%;
   height: 3.1145rem;
   flex-shrink: 0;
+  margin: 1em auto;
 }
 
 .home-footer {
@@ -95,7 +122,7 @@
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   transform: translate(0, 0);
   color: #AAA;
