--- a/src/App.css
+++ b/src/App.css
@@ -237,5 +237,115 @@
   text-decoration: underline;
 }
 
+/* VansHeader: Start */
 
+.vansHeader-header-container {
+  margin: 2em;
+}
 
+.vansHeader-h1 {
+  color: #161616;
+  font-family: Inter;
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2.10325rem; /* 105.164% */
+}
+
+.vansHeader-button-container {
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ gap: 1em;
+ margin-top: 1.5em;
+}
+
+.vansHeader-button {
+  display: flex;
+  width: 6.5rem;
+  height: 2.3125rem;
+  padding: 0.375rem 1.625rem 0.4375rem 1.625rem;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 0.3125rem;
+  background: #FFEAD0;
+  color: #4D4D4D;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.49494rem; /* 149.496% */
+  border: none;
+}
+
+.vansHeader-clear-filters-span {
+  color: #4D4D4D;
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.49494rem; /* 149.496% */
+  text-decoration-line: underline;
+  margin-left: 1em;
+  /* margin-left: auto; */
+}
+
+/* VansHeader: End */
+
+/* Vans: Start */
+
+.vans-main-container {
+  border: 2px solid gray;
+  padding: 2em;
+  width: 14rem;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.vans-image {
+  width: 100%;
+}
+
+.vans-info-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 2px solid red;
+}
+
+.vans-model-name-span {
+
+}
+
+.vans-price-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 1em 0;
+  border: 2px solid red;
+}
+
+.vans-button {
+  border-radius: 0.3125rem;
+  background: #E17654;
+  width: 5.35694rem;
+  height: 2.11788rem;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #FFEAD0;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.97888rem; /* 197.885% */
+  border: none;
+  align-items: center;
+}
+
+/* Vans: End */
