--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  
   font-family: inherit, sans-serif;
+}
+body {
+  background: #FFF7ED;
 }
