--- a/src/App.css
+++ b/src/App.css
@@ -456,15 +456,6 @@
   height: 28.64663rem;
 }
 
-.van-price > span {
-  color: #161616;
-font-family: Inter;
-font-size: 1.5rem;
-font-style: normal;
-font-weight: 700;
-line-height: 2.7595rem; /* 183.967% */
-}
-
 .van-type {
   width: 5.35694rem;
   height: 2.11788rem;
@@ -491,6 +482,24 @@ line-height: 2.7595rem; /* 183.967% */
   width: 27.89581rem;
   height: 3.1145rem;
   flex-shrink: 0;
+}
+
+.van-price {
+  color: #161616;
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2.7595rem; /* 183.967% */
+}
+
+.day-span {
+  color: #161616;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 2.7595rem;
 }
 
 /* VanDetail: End */
