--- a/src/App.css
+++ b/src/App.css
@@ -644,4 +644,16 @@ line-height: 1.71275rem; /* 105.164% */
   margin: 1em 0;
 }
 
+.back-button {
+  display: block;
+  color: black;
+  text-decoration: none;
+  margin-top: 60px;
+  margin-left: 26px;
+}
+
+.back-button span:hover {
+  text-decoration: underline;
+}
+
 /* Host Vans Detail: End */
