buttons filering van type using search params on vans page

--- a/src/App.css
+++ b/src/App.css
@@ -402,10 +402,12 @@
 
 .rugged {
   background-color: #115E59;
+  color: #FFEAD0;
 }
 
 .luxury {
   background-color: #161616;
+  color: #FFEAD0;
 }
 
 /* Vans: End */
