--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   background: #FFF7ED;
-  display: inline-flex;
+  /* display: inline-flex; */
   padding: 2.25006rem 1.61369rem 2.16394rem 1.625rem;
   justify-content: space-between;
   align-items: center;
@@ -50,6 +50,12 @@
   font-size: 1rem;
   color: #4D4D4D;
   font-weight: 600;
+}
+
+.login-icon {
+  height: 20px;
+  width: 20px;
+  margin-top: 1px;
 }
 
 .van-life-span {
