added redirect to host page after login

--- a/src/App.css
+++ b/src/App.css
@@ -817,7 +817,7 @@ line-height: 1.71275rem; /* 105.164% */
   font-family: "Inter", sans-serif;
 }
 
-.login-first {
+.login-error {
   color: red !important;
 }
 
